Added style tag as per review comment

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   
   <!-- please use CSS style tags here -->
+
+  <head>
+<style>
+h1 {color: blue; font-size:300%}
+p {color:blue}
+</style
+  </head>
   
   <body>
     <h1>Header</h1>
