Added headers 2 and 3

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@ p {color:blue}
   <body>
     <h1>Header</h1>
     <p>Paragraph</p>
+
+     <h1>Header 2</h1>
+      <h1>Header 3</h1>
   </body>
 </html>
