Rt: Added h3 tag in style

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <!-- please use CSS style tags here -->
 
   <head>
-<style>
-h1 {color: blue; font-size:300%}
-  h2 {color:red; font-size:150%} <!--- added at remote -->
-p {color:blue}
-</style
+    
+    <style>
+      h1 {color: blue; font-size:300%}
+      h2 {color:red; font-size:150%} <!--- added at remote -->
+      h3 {color:red; font-size:150%}
+      p {color:blue}
+    </style>
+    
   </head>
   
   <body>
     <h1>Header</h1>
     <p>Paragraph</p>
 
-     <h1>Header 2</h1>
-      <h1>Header 3</h1>
+    <h1>Header 2</h1>
+    <h1>Header 3</h1>
   </body>
+  
 </html>
